# googletest-cmake-example

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
src/: CMakeLists.txt
test/: AdditionTest.cpp  CMakeLists.txt
